--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Marriage -- Fiction'
 - !lcc 'PR'
 - !lcsh 'Man-woman relationships -- Fiction'
+- GITenberg
 tableOfContents: 'A very modern courtship: The two kisses -- A very modern marriage:
   A crooked mile.'
 title: 'Gray youth: The story of a very modern courtship and a very modern marriage'
